--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ header:
       url: /features
     - label: Documentation
       url: /documentation
+    - label: API Reference
+      url: /api
     - label: Download
       url: /download
       primary: true
@@ -62,3 +64,5 @@ exclude:
   - netlify.toml
   - stackbit-build.sh
   - stackbit-pull.js
+  - _gen
+
