--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,16 @@ header:
   nav_links:
     - label: Home
       url: /
-    - label: Features
-      url: /features
+    - label: Examples
+      url: /examples
+    - label: Roadmap
+      url: /roadmap
     - label: Documentation
       url: /documentation
     - label: API Reference
       url: /api
-    - label: Download
-      url: /download
+    - label: GitHub
+      url: https://github.com/openep/openep
       primary: true
 footer:
   logo_img: images/logo_alt.png
