Update footer to add email/links

--- a/_config.yml
+++ b/_config.yml
@@ -31,18 +31,18 @@ footer:
     - label: GitHub
       url: https://github.com/openep/openep-core/
   has_social: true
-  social_title: Community
+  social_title: Contact Us
   social_links:
-    - label: Twitter
-      url: 'https://twitter.com/'
+    - label: Email
+      url: 'mailto:steven.williams@ed.ac.uk'
       new_window: true
-    - label: Instagram
-      url: 'https://www.instagram.com/'
-      new_window: true
-    - label: LinkedIn
-      url: 'https://www.linkedin.com/'
-      new_window: true
+  links:
+    - label: Cardiac Software Partners
+      url: 'https://www.cardiacsoftwarepartners.org'
+    - label: Cardiac Electro-Mechanics Research Group
+      url: 'http://www.cemrg.co.uk'
   has_subscribe: false
+
 sass:
   indentWidth: 4
   style: nested
