--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ header:
     - label: Documentation
       url: /documentation
     - label: GitHub
-      url: https://github.com/openep/openep-core/
+      url: https://github.com/openep/
       primary: true
 footer:
   logo_img: images/logo.png
