--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ header:
       url: /roadmap
     - label: Documentation
       url: /documentation
+    - label: Support
+      url: /support
     - label: GitHub
       url: https://github.com/openep/
       primary: true
