--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ header:
       url: /roadmap
     - label: Documentation
       url: /documentation
-    - label: Support
+    - label: Engagement
       url: /support
     - label: GitHub
       url: https://github.com/openep/
